--- a/css/styles.css
+++ b/css/styles.css
@@ -297,8 +297,12 @@ aside:hover {
 	}
 	aside {
 		transform: scale(70%);
+		fill: url(#asideGradient);
 	}
 	#dock ul {
 		column-gap: var(--spacing-l);
+	}
+	#search .brave-icon {
+		fill: #FB542B;
 	}
 }
